--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -65,6 +65,9 @@
             </svg>
             <span>Starts on 2nd Dec</span>
           </div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="2" height="20" viewBox="0 0 2 20" fill="none">
+            <path d="M1 1L1 19" stroke="#49887B" stroke-width="0.8" stroke-linecap="round"/>
+          </svg>
           <div class="d-flex align-items-center justify-items-center gap-1">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -106,7 +109,7 @@
 
             <div class="step-content">
               <p>
-                <strong>3 Steps to complete</strong> before the<br />
+                <strong>3 steps to complete</strong> before the<br />
                 workshop starts
               </p>
             </div>
@@ -115,7 +118,7 @@
           <!-- active -->
           <div class="step active">
             <div class="v-stepper">
-              <div class="circle"><span class="number">1</span></div>
+              <div class="circle"><div class="number">1</div></div>
               <div class="line"></div>
             </div>
             <div class="step-content">
@@ -210,7 +213,7 @@
               <div id="step2" class="ty-card" style="display: none">
                 <h3>New Email</h3>
                 <div class="ty-form-group">
-                  <label>New Email</label>
+                  <label>Email ID</label>
                   <input
                     type="email"
                     id="newEmail"
@@ -295,7 +298,7 @@
           <!-- active -->
           <div class="step active">
             <div class="v-stepper">
-              <div class="circle"><span class="number">2</span></div>
+              <div class="circle"><div class="number">2</div></div>
               <div class="line"></div>
             </div>
 
@@ -335,7 +338,7 @@
           <!-- regular -->
           <div class="step active">
             <div class="v-stepper">
-              <div class="circle"><span class="number">3</span></div>
+              <div class="circle"><div class="number">3</div></div>
               <div class="line"></div>
             </div>
 
