--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
               <div class="d-flex gap-20 align-items-center">
                 <div class="workshop-include-section-image-parent">
                   <img
-                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/1-hour-recorded-session-every-morning.webp" />
+                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/1-hour-recorded-session-every-morning.svg" />
                 </div>
                 <div>
                   <h5>1 Hour Recorded Session Every Morning</h5>
@@ -339,10 +339,10 @@
               <div class="d-flex gap-20 align-items-center">
                 <div class="workshop-include-section-image-parent">
                   <img
-                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/holistic-health-knowledge.webp" />
+                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/holistic-health-knowledge.svg" />
                 </div>
                 <div>
-                  <h5>Holistic Health Knowledge</h5>
+                  <h5>Holistic Health<br/> Knowledge</h5>
                   <p>
                     This is a course designed to transform every aspect of
                     your health - physical body, food, sleep, movement,
@@ -355,10 +355,10 @@
               <div class="d-flex gap-20 align-items-center">
                 <div class="workshop-include-section-image-parent">
                   <img
-                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/learn-by-doing-not-just-theory.webp" />
+                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/learn-by-doing-not-just-theory.svg" />
                 </div>
                 <div>
-                  <h5>Learn by Doing, not Just Theory</h5>
+                  <h5>Learn by Doing,<br/>not Just Theory</h5>
                   <p>
                     You may have seen hundreds of health videos before, but
                     struggled to apply them. This course is different. Here,
@@ -371,10 +371,10 @@
               <div class="d-flex gap-20 align-items-center">
                 <div class="workshop-include-section-image-parent">
                   <img
-                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/community-of-thousands-of-people.webp" />
+                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/community-of-thousands-of-people.svg" />
                 </div>
                 <div>
-                  <h5>Community of Thousands of People</h5>
+                  <h5>Community of Thousands<br/> of People</h5>
                   <p>
                     You will have a beautiful community of like minded people
                     from all across the world taking the challenge with you,
@@ -387,7 +387,7 @@
               <div class="d-flex gap-20 align-items-center">
                 <div class="workshop-include-section-image-parent">
                   <img
-                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/handwritten-notes-and-q&a’s-for-every-session.webp" />
+                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/handwritten-notes-and-q&a’s-for-every-session.svg" />
                 </div>
                 <div>
                   <h5>Handwritten Notes and Q&A’s For Every Session</h5>
@@ -1116,7 +1116,7 @@
                     </p>
                   </div>
                 </div>
-                <hr class="mt-30 divider" />
+                <hr style="background-color: red;" class="mt-30" />
                 <div class="testimonials-other mt-30">
                   <div class="testimoni-top d-flex gap-20 align-items-center">
                     <div class="highlighted-testimoni-image m-0">
@@ -1819,17 +1819,17 @@
             </div>
           </div>
         </div>
-        <hr class="divider mt-40" />
+        <!-- <hr class="divider mt-40" /> -->
         <!-- Scholorship Card Section -->
         <div class="scholarship-card mt-40">
           <div class="scholarship-card-content">
             <h4>Because everyone deserves a chance to heal</h4>
             <p>
-              Join our wellness workshops for just ₹300 instead of ₹1000.
+              Join our wellness workshops for just ₹490 instead of ₹990.
               Apply now to avail this offer
             </p>
             <button id="openModalBtn" class="open-modal-btn">
-              Apply for Discount
+              Apply for a scholarship
             </button>
           </div>
           <div class="scholarship-card-image-parent">
@@ -1839,7 +1839,7 @@
           </div>
         </div>
 
-        <hr class="divider mt-40" />
+        <!-- <hr class="divider mt-40" /> -->
         <div class="mt-40">
           <div class="who-is-for">
             <div>
@@ -2034,7 +2034,7 @@
               </div>
               <div>
                 <p class="not-for-items-text text-center">
-                  Pregnant or breastfeeding mothers
+                  Pregnant or <br/> breastfeeding mothers
                 </p>
               </div>
             </div>
@@ -2056,7 +2056,7 @@
               </div>
               <div>
                 <p class="not-for-items-text text-center">
-                  Elderly citizens above age 60
+                  Elderly citizens<br/> above age 60
                 </p>
               </div>
             </div>
@@ -2078,7 +2078,7 @@
               </div>
               <div>
                 <p class="not-for-items-text text-center">
-                  Children below age 14
+                  Children<br/> below age 14
                 </p>
               </div>
             </div>
@@ -2250,24 +2250,13 @@
 
                 <div class="description host-details-inner">
                   <p class="host-detail-text">
-                    Subah is an <b>acclaimed health educator</b>, published
-                    author and co-founder of the health education platform
-                    'Satvic Movement'. Subah's journey into health began after
-                    she healed her own chronic diseases by At the young age of
-                    17,
-                  </p>
-
-                  <p class="host-detail-text">
-                    she decided to devote her life to the purpose of uplifting
-                    people's health, and trained to become a holistic health
-                    educator. She learnt the science of 'nature cure' under
-                    the guidance of multiple Indian masters.
+                    Subah is an <strong>acclaimed health educator,</strong> published author and co-founder of the health education platform 'Satvic Movement'. Subah's journey into health began after she healed her own chronic diseases by following <strong>natural healing principles.</strong>
                   </p>
                   <p class="host-detail-text">
-                    Subah's goal is to share this intricate ancient knowledge,
-                    adjusted to contemporary lifestyles, with as many people
-                    as possible, using all the tools that current day
-                    technology has to offer.
+                    At the young age of 17, she decided to devote her life to the purpose of <strong>uplifting people's health,</strong> and trained to become a holistic health educator. She learnt the science of 'nature cure' under the guidance of multiple Indian masters.
+                  </p>
+                  <p class="host-detail-text">
+                    Subah's goal is to share this intricate ancient knowledge, adjusted to contemporary lifestyles, with as many people as possible, using all the tools that current day technology has to offer.
                   </p>
                 </div>
                 <button class="read-more-text button">
@@ -2289,24 +2278,10 @@
 
                 <div class="description host-details-inner">
                   <p class="host-detail-text">
-                    Himadri, is a young and dynamic Satvic health educator
-                    from Jaipur and has been a part of the
-                    <b>Satvic Team for more than 4 years</b>. She trained
-                    intensively to be an educator and she
-                    <b>currently leads</b> the 4-hour
-                  </p>
-
-                  <p class="host-detail-text">
-                    Health Transformation Workshops, 3-Day Juice Fast and now
-                    co-hosts the Ultimate Health Challenge along with Subah.
-                    Till date, Himadri has hosted more workshops for over 6000
-                    people.
+                    Himadri, is a young and dynamic Satvic health educator from Jaipur and has been a part of the <strong>Satvic Team for more than 4 years.</strong> She trained intensively to be an educator and she currently leads the 4-hour. Health Transformation Workshops, 3-Day Juice Fast and now co-hosts the Ultimate Health Challenge along with Subah. Till date, Himadri has <strong>hosted more workshops for over 6000 people.</strong>
                   </p>
                   <p class="host-detail-text">
-                    She chose the path of natural healing when she saw immense
-                    improvement in her father's health. That inspired her to
-                    make this the purpose of her own life: to share health
-                    wisdom with the world in easily, applicable terms.
+                    She chose the path of natural healing when she saw immense improvement in her father's health. That inspired her to make this the purpose of her own life: <strong>to share health wisdom with the world</strong> in easily, applicable terms.
                   </p>
                 </div>
                 <span class="read-more-text button">
