--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/holistic-health-knowledge.svg" />
                 </div>
                 <div>
-                  <h5>Holistic Health<br /> Knowledge</h5>
+                  <h5>Holistic Health<br class="workshop-included-br" /> Knowledge</h5>
                   <p>
                     This is a course designed to transform every aspect of
                     your health - physical body, food, sleep, movement,
@@ -402,7 +402,7 @@
                     src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/learn-by-doing-not-just-theory.svg" />
                 </div>
                 <div>
-                  <h5>Learn by Doing,<br />not Just Theory</h5>
+                  <h5>Learn by Doing,<br class="workshop-included-br" />not Just Theory</h5>
                   <p>
                     You may have seen hundreds of health videos before, but
                     struggled to apply them. This course is different. Here,
@@ -418,7 +418,7 @@
                     src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/community-of-thousands-of-people.svg" />
                 </div>
                 <div>
-                  <h5>Community of Thousands<br /> of People</h5>
+                  <h5>Community of Thousands<br class="workshop-included-br" /> of People</h5>
                   <p>
                     You will have a beautiful community of like minded people
                     from all across the world taking the challenge with you,
@@ -523,7 +523,7 @@
           </div>
           <div class="habits-parent">
             <div class="habit-item">
-              <div class="mb-10">
+              <div class="habit-gif">
                 <img src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/habit-1.gif" />
               </div>
               <div>
@@ -536,7 +536,7 @@
               </div>
             </div>
             <div class="habit-item">
-              <div class="mb-10">
+              <div class="habit-gif">
                 <img src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/habit-2.gif" />
               </div>
               <div>
@@ -548,7 +548,7 @@
               </div>
             </div>
             <div class="habit-item">
-              <div class="mb-10">
+              <div class="habit-gif">
                 <img src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/habit-3.gif" />
               </div>
               <div>
@@ -559,7 +559,7 @@
               </div>
             </div>
             <div class="habit-item habit-large">
-              <div class="mb-10">
+              <div class="habit-gif">
                 <img src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/habit-4.gif" />
               </div>
               <div>
@@ -571,7 +571,7 @@
               </div>
             </div>
             <div class="habit-item habit-large">
-              <div class="mb-10">
+              <div class="habit-gif">
                 <img src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/habit-5.gif" />
               </div>
               <div>
@@ -583,7 +583,7 @@
               </div>
             </div>
             <div class="habit-item habit-large">
-              <div class="mb-10">
+              <div class="habit-gif">
                 <img src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/habit-6.gif" />
               </div>
               <div>
