--- a/index.html
+++ b/index.html
@@ -636,9 +636,15 @@
           <h2 class="whats-include-heading">Curriculum For The 21 Days</h2>
           <div class="taTabs">
             <ul class="taTabs__navWap">
-              <li class="taTabs__nav taTabs__nav--active">Week 1</li>
-              <li class="taTabs__nav">Week 2</li>
-              <li class="taTabs__nav">Week 3</li>
+              <button>
+                <li class="taTabs__nav taTabs__nav--active">Week 1</li>
+              </button>
+              <button>
+                <li class="taTabs__nav">Week 2</li>
+              </button>
+              <button>
+                <li class="taTabs__nav">Week 3</li>
+              </button>
             </ul>
             <div class="taTabs__contentWrap">
               <div class="taTabs__content taTabs__content--active">
