--- a/index.html
+++ b/index.html
@@ -498,14 +498,14 @@
             <div class="benefits-sections">
               <div class="benefit-img">
                 <img
-                  src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/experience-more-mental-clarity.png" />
+                  src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/experience-more-mental-clarity.webp" />
               </div>
               <p>Experience more <br /><b> mental clarity</b></p>
             </div>
             <div class="benefits-sections">
               <div class="benefit-img">
                 <img
-                  src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/get-deeper-sleep-at-night.png" />
+                  src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/get-deeper-sleep-at-night.webp" />
               </div>
               <p>
                 Get deeper <br />
@@ -636,15 +636,9 @@
           <h2 class="whats-include-heading">Curriculum For The 21 Days</h2>
           <div class="taTabs">
             <ul class="taTabs__navWap">
-              <button>
-                <li class="taTabs__nav taTabs__nav--active">Week 1</li>
-              </button>
-              <button>
-                <li class="taTabs__nav">Week 2</li>
-              </button>
-              <button>
-                <li class="taTabs__nav">Week 3</li>
-              </button>
+              <button class="taTabs__nav taTabs__nav--active">Week 1</button>
+              <button class="taTabs__nav">Week 2</button>
+              <button class="taTabs__nav">Week 3</button>
             </ul>
             <div class="taTabs__contentWrap">
               <div class="taTabs__content taTabs__content--active">
@@ -1879,7 +1873,7 @@
               Apply now to avail this offer
             </p>
             <button id="openModalBtn" class="open-modal-btn">
-              Apply for a scholarship
+              Apply for scholarship
             </button>
           </div>
           <div class="scholarship-card-image-parent">
